--- a/index.html
+++ b/index.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Cargo test</title>
+  <head>
+    <meta charset="utf-8">
+    <title>Cargo test</title>
 
-  <!-- ✨ If your code will be PASTED into Cargo's Page > Code > Custom CSS -->
-  <link rel="stylesheet" href="./src/styles.css">
+    <!-- ✨ If your code will be PASTED into Cargo's Page > Code > Custom CSS -->
+    <link rel="stylesheet" href="./src/global/styles.css">
+    <link rel="stylesheet" href="./src/constellation/styles.css">
 
-  <style>
+    <style>
     /* Optional stub content so you can scroll and see the section in context */
     body{margin:0;font:16px/1.4 sans-serif}
     header,footer{padding:80px 24px;background:#f5f5f5}
     header{min-height:20vh} footer{min-height:15vh}
-  </style>
-</head>
-<body>
-  <header><h1>Header area (scroll past me)</h1></header>
+    </style>
+  </head>
+  <body>
+    <header><h1>Header area (scroll past me)</h1></header>
+    <!-- ✨ Cargo's Page > Code > Custom HTML -->
+    <section id="constellationSection">
+      <div id="starfield">
+        <canvas id="drawCanvas"></canvas>
+      </div>
+    </section>
 
-  <section id="constellationSection">
-  <div id="starfield">
-    <canvas id="drawCanvas"></canvas>   <!-- drawing layer -->
-    <!-- stars are injected by JS -->
-  </div>
-</section>
-
-<footer><p>More page content</p></footer>
-
-<script type="module">
-  import './src/constellation.js';
-</script>
-</body>
+    <footer><p>More page content</p></footer>
+    <!-- ✨ Cargo's Page > Code > Custom HTML -->
+    <script type="module">
+      import './src/constellation/constellation.js';
+    </script>
+    <script type="module">
+      import './src/global/topBar.js';
+    </script>
+  </body>
 </html>
