--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       import './src/constellation/constellation.js';
     </script>
     <script type="module">
-      import './src/global/topBar.js';
+      import './src/global/index.js';
     </script>
   </body>
 </html>
